skeplib/tests/fixtures/parser/valid/import_export_forms.sk
import io;
import utils.math;
import utils.math as m;
from utils.math import add, sub as minus;

export { add as plus, minus, version };

fn main() -> Int {
  return 0;
}
