skeplib/tests/fixtures/parser/invalid/export_from_missing_path.sk
export { add } from ;
fn main() -> Int { return 0; }
